--- a/gb/24/1/15/n14158907.md
+++ b/gb/24/1/15/n14158907.md
@@ -3,13 +3,13 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵柏克利连三场爆满加座 精英赞引人向上</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158908-240114212309100731-600x400.jpg" />
-<h6>2024年1月14日下午，神韵世界艺术团在加州大学伯克利分校泽勒巴克馆的第三场演出继续爆满加座。（周容／大纪元）
-</h6>
+<h6>2024年1月14日下午，神韵世界艺术团在加州大学伯克利分校泽勒巴克馆的第三场演出继续爆满加座。（周容／大纪元）</h6>
 <hr>
 	<p>【大纪元2024年01月15日讯】（大纪元旧金山记者站报导）2024年1月14日下午，神韵世界艺术团在加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）的第三场演出，继续维持爆满加座的票房佳绩。神韵精湛的演出吸引了当地主流人士和商界精英慕名前来观赏。观众称赞神韵让他们了解到真正的中华文化。</p>
-<p>演出展现的纯真、纯善、纯美的神传文化，引领伯克利的各界观众穿越时空，置身天国世界，沐浴在心灵净化中。有观众表示，“已成为共产主义之前文化的粉丝”“神韵是为世界提供的文化”“创世主再次降临，保护了所有的人”“神韵的节目引人向上”。</p>
+<p>演出展现的纯真、纯善、纯美的神传文化，引领伯克利的各界观众穿越时空，置身天国世界，沐浴在心灵净化中。有观众表示，“已成为共产主义之前文化的粉丝”“神韵是为世界提供的文化”“创世主再次降临，保护了所有的人”“神韵的节目引人向上”。
+</p>
 <h2>公司高管：没有共产主义的文化绝对精彩</h2>
-<figure id="attachment_14158910" aria-describedby="caption-attachment-14158910" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158910-240114210201100731.jpg"><img decoding="async" class="size-large wp-image-14158910" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158910-240114210201100731-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14158910" class="wp-caption-text">2024年1月14日下午，德国公司AirUp高级营运主管William Ashton和太太观看了神韵世界艺术团在加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）的第三场演出。（周容／大纪元）</figcaption></figure>
+<figure id="attachment_14158910" aria-describedby="caption-attachment-14158910" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158910-240114210201100731.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14158910" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158910-240114210201100731-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14158910" class="wp-caption-text">2024年1月14日下午，德国公司AirUp高级营运主管William Ashton和太太观看了神韵世界艺术团在加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）的第三场演出。（周容／大纪元）</figcaption></figure>
 <p>“绝对不可思议，蔚为大观！舞台色彩，声乐演唱，都绝对精彩。”德国公司AirUp高级营运主管William Ashton首次体验神韵，赞叹节目诠释了美妙的传统价值观。他说，作为“‘共产主义之前的文化’的忠实粉丝”，他推荐大家每年都看神韵。</p>
 <p>Ashton在德国水瓶初创公司AirUp担任美国业务主管，负责营运与供应链。当日下午，他偕太太Joanne Ashton观看了神韵演出。</p>
 <p>“神韵艺术家们太令人难以置信了！”Ashton对古典舞的高难度技巧印象尤为深刻，“他们显然很有天赋，非常了不起。优美的舞蹈动作与高难度肢体动作结合亮相，简直……我知道他们是艺术家，而且他们也是运动健将。”</p>
@@ -20,9 +20,9 @@
 <p>Ashton总结说，从演出中接收到的讯息就是，“共产党掌权之前的文化和几千年历史是什么样。”他感叹，“我们要怎么样才能回到那个时代？那时的文化与现在大不相同。”</p>
 <p>古文化在神韵舞台上重焕生机，Ashton说：“绝对喜爱”，“我是‘共产主义之前文化’的忠实粉丝，中国的传统价值观当然是很美妙的东西。”</p>
 <p>他想对神韵艺术家们说：“演出绝对不可思议，我们很喜欢，你们完成得非常好。”</p>
-<p>“我一定会向所有的朋友描述我看到的一切。”Ashton说，“我鼓励大家每年至少来看一次（神韵），这是你意想不到的体验。你所看到的一切都出乎你的预料。第一次来看神韵，我不知道会看到什么，我感到惊喜。”</p>
+<p>“我一定会向所有的朋友描述我看到的一切。”Ashton说，“我鼓励大家每年至少来看一次（神韵），这是你意想不到的体验。你所看到的一切都出乎你的预料。第一次来看神韵，我不知道会看到什么，我感到惊喜。”
 <h2>酒庄老板：神韵的故事是永恒的</h2>
-<figure id="attachment_14158911" aria-describedby="caption-attachment-14158911" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158911-240114210156100731.jpg"><img decoding="async" class="size-large wp-image-14158911" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158911-240114210156100731-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14158911" class="wp-caption-text">2024年1月14日下午，酒庄老板Mark Lyon在伯克利的加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）观赏了神韵世界艺术团的第三场演出。（于丽丽／大纪元）</figcaption></figure>
+<figure id="attachment_14158911" aria-describedby="caption-attachment-14158911" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158911-240114210156100731.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14158911" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158911-240114210156100731-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14158911" class="wp-caption-text">2024年1月14日下午，酒庄老板Mark Lyon在伯克利的加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）观赏了神韵世界艺术团的第三场演出。（于丽丽／大纪元）</figcaption></figure>
 <p>酒庄老板Mark Lyon观看了演出后赞叹道，“神韵的舞蹈技巧和编舞之美令人陶醉。”</p>
 <p>Lyon是当地知名的酿酒师和葡萄种植园主，在加州北部著名的葡萄酒产区索诺马市拥有自己的酒庄，在旧金山也有自家的品酒屋。</p>
 <p>多次观看神韵的他说：“神韵的故事是永恒的，非常独特。”他着迷于不同的文化故事和中国古老传说，“这是为世界提供的文化。”</p>
@@ -30,9 +30,9 @@
 <p>“我还是喜欢他们（舞蹈演员）跳起来，然后变身飞翔而去的画面。”他赞赏连连说道，当然，“神韵的舞蹈和服装最为突出。他们的穿戴方式也令人难以置信，都是我们在日常生活中从未见过的。”</p>
 <p>Lyon表示，自己对其他的精神信仰很着迷，而神韵“似乎在阐述创世主、慈悲、真理和与人为善，这部分我一直很喜欢。我总是喜欢了解不同的精神信仰。”他认为，“佛陀是我们世世代代神性的主掌者。”</p>
 <p>同时，他也体悟到，神韵传递的传统价值观对美国社会非常有帮助，“非常有价值，因为神佛教导人们平和、慈悲和遵循真理。我认为这些都是世界上任何修行的美德，是普世的（价值）。”</p>
-<p>Lyon表示，非常感谢舞蹈编导和所有幕后的工作人员，“你们的工作非常出色，我期待观再次观看你们的演出，并会向我的家人推荐。”</p>
+<p>Lyon表示，非常感谢舞蹈编导和所有幕后的工作人员，“你们的工作非常出色，我期待观再次观看你们的演出，并会向我的家人推荐。”
 <h2>教会主管看神韵 领悟善良必胜永恒主题</h2>
-<figure id="attachment_14158916" aria-describedby="caption-attachment-14158916" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158916-240114210146100731.jpg"><img decoding="async" class="size-large wp-image-14158916" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158916-240114210146100731-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14158916" class="wp-caption-text">2024年1月14日下午，教会执行主任Brigette Lopez观看了神韵世界艺术团本演季在加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）的第三场演出。（周容／大纪元）</figcaption></figure>
+<figure id="attachment_14158916" aria-describedby="caption-attachment-14158916" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158916-240114210146100731.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14158916" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158916-240114210146100731-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14158916" class="wp-caption-text">2024年1月14日下午，教会执行主任Brigette Lopez观看了神韵世界艺术团本演季在加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）的第三场演出。（周容／大纪元）</figcaption></figure>
 <p>“精美绝伦，讲述了历史故事，我很喜欢，绝对喜欢。还了解了以前不知道的事情。”教会执行主任Brigette Lopez看完神韵演出后说。</p>
 <p>她钦佩神韵艺术家高超的舞蹈技巧，“太美了，他们舞蹈技巧非常高，我真希望能像他们一样，太美了。”</p>
 <p>“神韵乐团的演奏令人震憾”，她说，“真的悦耳动听，舞台上的舞蹈已经很美了，同时又可以欣赏到美妙的音乐。太美了。”</p>
@@ -41,46 +41,43 @@
 <p>对于演出中呈现的善与恶主题，“我很喜欢，我喜欢善与恶的多次较量，这是很好的故事主题。她帮助你记住，正义终将获胜。</p>
 <p>第一个节目让她思考，“起初我不了解故事情节，也不了解中国历史，但是我们所有的人，心中都会有疑问：这一切是如何开始的？我们来自何方？我们要如何再接上缘？演出用不同的方式将这些一一呈现了出来。”</p>
 <p>Lopez想要向神韵艺术家表达感谢，“非常感谢你们的辛苦付出，感谢你们的努力。”</p>
-<p>她表示要推荐神韵，“绝对应该来看，非常值得。”</p>
+<p>她表示要推荐神韵，“绝对应该来看，非常值得。”
 <h2>公司老板观神韵感动落泪：节目非常感人</h2>
-<figure id="attachment_14158914" aria-describedby="caption-attachment-14158914" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158914-240114212307100731.jpg"><img decoding="async" class="size-large wp-image-14158914" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158914-240114212307100731-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14158914" class="wp-caption-text">2024年1月14日下午，领袖培训公司老板Clint Griess观看了神韵世界艺术团本演季在加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）的第三场演出。（新唐人）</figcaption></figure>
+<figure id="attachment_14158914" aria-describedby="caption-attachment-14158914" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14158914-240114212307100731.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14158914" title="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14158914-240114212307100731-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14158914" class="wp-caption-text">2024年1月14日下午，领袖培训公司老板Clint Griess观看了神韵世界艺术团本演季在加州大学伯克利分校泽勒巴克馆（Zellerbach Hall）的第三场演出。（新唐人）</figcaption></figure>
 <p>领袖培训公司老板Clint Griess观看神韵后表示，他非常喜欢神韵，“神韵演出带给人情感，我甚至落泪了，节目非常感人。”</p>
 <p>神韵舞剧呈现了正在中国发生的迫害信仰的故事，对此他表示，“对法轮功学员迫害的故事令人触动，这让人意识到信仰自由的重要性。”</p>
 <p>“迫害带给家庭毁灭性的打击，（中共）甚至活摘他们的器官，节目对此没有丝毫的保留，直白的将事情展现给观众。”他说，“对此，我很高兴他们用这种方式呈现，否则就不会这么真实。”</p>
 <p>Griess表示，他经常看芭蕾舞表演，对于神韵演员高超的技巧，他给予高度赞赏，“演员充满活力，动作整齐，我从未看过如此精准、整齐划一的舞蹈动作。”</p>
 <p>“神韵的节目引人向上”，他说，当灾难来临时“神出面拯救，虽然我不认识节目中出现的神，但这是普世的（价值）。”</p>
 <p>责任编辑：瑛智</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158314.md#1">陪90岁母亲庆生 老板：神韵是满分作品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158326.md#1">建筑商观神韵：信仰迫害不应存在</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158333.md#1">资深工程师夫妇赞神韵：炫目之美 一生必看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158365.md#1">德勤事务所咨询顾问：神韵展示未来的中国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158367.md#1">公司老板兼模特赞神韵：仿佛进入梦幻世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/14/n14158368.md#1">神韵触及中国现实 律师：表现得优雅且智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/14/n10144729.md#1" target="_blank">林辉：支持缅共的知青旅往事并不如烟</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/1/n10752825.md#1" target="_blank">共产暴政录：张国焘鄂豫皖根据地肃反</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/14/n11383793.md#1" target="_blank">德国小伙修炼法轮功 戒毒戒烟获新生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391372.md#1">冬至祈福六宜三不宜  古人迎祥避灾殃的作法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396714.md#1">美国女孩自曝前世死因：飞机撞击帝国大厦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的，维吉尼亚，有一个圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394956.md#1">【未解之谜】时间是神？验证“天上方一日 地上已千年”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/13/n12686427.md#1">【元曲大家】名闻天下、声震闺阁的郑光祖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396726.md#1">【军事情报局】俄中将身亡 朝军伤亡率已近10%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396454.md#1">【未解之谜】无神论教授濒死带回神的启示 美国将被净化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397280.md#1">【秦鹏观察】没人敢说真话 习军方亲信不见了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14393938.md#1">父母看过来 6种Costco超值商品可在年节买</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395770.md#1">美国排名前十的高薪稳定工作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395790.md#1">中共拒绝让主要调查人员上船检查 瑞典批评</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396610.md#1">上海法院出庭旧照曝光 刘嘉玲成港星第一人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14397235.md#1">齐秦被爆罹患肺癌晚期 歌手姐姐和妻子急回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14397202.md#1">赵薇遭封杀逾3年 其富商丈夫黄有龙被追巨债</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14395896.md#1">中国禁播 娄烨金马奖最佳影片在台湾上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396275.md#1">Spotify公布十年来播放量最高的圣诞节歌曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396859.md#1">马铃薯如何存放6个月？ 英国超市教你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395628.md#1">旅行时如何寻找美食的4个诀窍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396187.md#1">研究：男人和女人羡慕异性什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391805.md#1">营养师破解补钙三误区 九种蔬菜含钙量完胜牛奶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392285.md#1">琼瑶抉择促人深思 如何应对老年生活挑战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/15/n14158907.htm">神韵柏克利连三场爆满加座 精英赞引人向上</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/15/n14158907.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
